# rsrpc

./: Cargo.toml  README.md
.github/workflows/: nightly.yml  rust.yml
benches/: comparison.rs
plugin/: rsrpc.js
resources/: detectable.json
src/: bridge.rs  config.rs  lib.rs  main.rs  server.rs  types.rs
src/process/: detectable.rs  mod.rs  unix.rs  windows.rs
src/protocol/: json.rs  mod.rs  msgpack.rs
src/transports/: ipc.rs  mod.rs  websocket.rs
tests/: integration.rs
tools/updater/: Cargo.toml
tools/updater/src/: main.rs
