[package]
name = "rsrpc"
version = "0.1.0"
edition = "2021"
description = "High-performance Discord RPC server replacement with dual JSON/MessagePack protocol"
license = "MIT"
repository = "https://github.com/pog5/rsrpc"

[dependencies]
tokio = { version = "1", features = [
    "full",
    "sync",
    "time",
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
clap = { version = "4.5", features = ["derive", "env"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[target.'cfg(unix)'.dependencies]
sysinfo = "0.32"

[dev-dependencies]
criterion = "0.8"
tokio-test = "0.4"

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
